--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.2"
   }
 }
