--- a/k8_manifest/portfolio-api.yaml
+++ b/k8_manifest/portfolio-api.yaml
@@ -46,7 +46,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: node-service
+  name: portfolio-api-service
   namespace: portfolio
 spec:
   selector:
